# ojs-python-sdk

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-compat.yml  ci-reusable.yml  ci.yml  dependabot-automerge.yml  release-please.yml  release.yml  security.yml
docs/: conf.py  index.rst
examples/: basic_enqueue.py  middleware_example.py  worker_processing.py  workflow_chain.py
src/ojs/: __init__.py  _utils.py  client.py  durable.py  encryption.py  error_codes.py  errors.py  events.py  job.py  middleware.py  ml.py  otel.py  progress.py  queue.py  retry.py  subscribe.py  testing.py  worker.py  workflow.py
src/ojs/agent/: __init__.py  client.py  decorator.py  types.py
src/ojs/attest/: __init__.py  attestor.py  types.py
src/ojs/middleware/: __init__.py  logging.py  metrics.py  retry.py  timeout.py
src/ojs/recorder/: __init__.py  recorder.py
src/ojs/serverless/: __init__.py  aws_lambda.py  azure_functions.py
src/ojs/transport/: __init__.py  base.py  grpc.py  http.py  rate_limiter.py
src/openjobspec/recorder/: __init__.py
tests/: __init__.py  conftest.py  test_attest.py  test_benchmark.py  test_benchmarks.py  test_client.py  test_durable.py  test_encryption.py  test_errors.py  test_events_and_queues.py  test_fuzz.py  test_job.py  test_middleware.py  test_middleware_impls.py  test_ml.py  test_new_endpoints.py  test_rate_limiter.py  test_retry.py  test_subscribe.py  test_testing.py  test_transport_grpc.py  test_transport_http.py  test_transport_new_endpoints.py  test_worker.py  test_worker_lifecycle.py  test_workflow.py
tests/integration/: test_with_redis_backend.py
