[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openjobspec"
version = "0.1.0"
description = "Official Python SDK for Open Job Spec (OJS) — a language-agnostic job processing standard"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "OpenJobSpec Contributors" },
]
keywords = ["jobs", "background-jobs", "task-queue", "ojs", "openjobspec", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "pdoc>=14.0",
]

[project.urls]
Homepage = "https://openjobspec.org"
Repository = "https://github.com/openjobspec/ojs-python-sdk"
Documentation = "https://openjobspec.org/sdks/python"
Changelog = "https://github.com/openjobspec/ojs-python-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ojs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
