[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openjobspec"
version = "0.2.0"
description = "Official Python SDK for Open Job Spec (OJS) — a language-agnostic job processing standard"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "OpenJobSpec Contributors" },
]
keywords = ["jobs", "background-jobs", "task-queue", "ojs", "openjobspec", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://openjobspec.org"
Repository = "https://github.com/openjobspec/ojs-python-sdk"
Documentation = "https://openjobspec.org/sdks/python"
Changelog = "https://github.com/openjobspec/ojs-python-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ojs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ojs"]
omit = ["src/ojs/otel.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "RUF",   # Ruff-specific rules
  "ASYNC", # flake8-async
  "S",     # flake8-bandit (security)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
